<resources>
    <string name="app_name">EsercitazioneBonus</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_surname">Cognome</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_bday">Data di nascita</string>
    <string name="alert_dialog_ok">Conferma</string>
    <string name="action_sign_in">Accedi o registrati</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="error_form_activity">Dati inseriti non validi</string>
    <string name="welcome">"Benvenuto !"</string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">La password deve contenere almeno 5 caratteri</string>
    <string name="login_failed">"Login fallito"</string>
    <string name="logout">Logout</string>
    <string name="libretto">Il mio libretto</string>
    <string name="add_vote">Aggiungi voto</string>
    <string name="remove_vote">Rimuovi voto</string>
    <string name="prompt_cfu">Numero di Crediti</string>
    <string name="prompt_exam_name">Nome dell\'esame</string>
    <string name="prompt_vote">Voto ottenuto (31 = 30L)</string>
    <string name="action_add_vote">Conferma il voto e aggiungilo al libretto</string>
    <string name="first_vote">Inserisci il tuo primo voto e crea il tuo libretto personale!</string>
    <string name="exam">ESAME</string>
    <string name="vote">VOTO</string>
    <string name="credits">CREDITI</string>
    <string name="login_title">LOGIN</string>
    <string name="aritm_title">MEDIA ARITMETICA</string>
    <string name="ponde_title">MEDIA PONDERATA</string>
    <string name="laurea_title">VOTO PREVISTO DI LAUREA</string>
    <string name="nuovo_voto">NUOVO VOTO</string>
